--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -2269,6 +2269,13 @@ choice
 	prompt "LCD Panel"
 	default FB_MSM_MDDI_AUTO_DETECT
 
+config FB_MSM_LCDC_SAMSUNG_WVGA
+	depends on FB_MSM_LCDC_HW
+	bool "LCDC Samsung WVGA Panel"
+	select FB_MSM_LCDC_PANEL
+	---help---
+	  Support for LCDC Samsung WVGA (480x800) panel
+
 config FB_MSM_LCDC_PRISM_WVGA_PANEL
 	depends on FB_MSM_LCDC_HW
 	bool "LCDC Prism WVGA Panel"
@@ -2497,3 +2504,4 @@ if FB || SGI_NEWPORT_CONSOLE
 endif
 
 endmenu
+
